--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,7 @@ a {
 	display: inline;
 	font-size: 20px;
 	font-weight: 500;
+	text-decoration: none;
 }
 section {
 	height: 400px;
@@ -52,6 +53,18 @@ h2 {
 	text-align: center;
 	padding-top: 42px;
 }
+p {
+	text-align: left;
+	padding-top: 47px;
+	padding-left: 44px;
+	padding-right: 450px;
+}
 footer {
 	clear: both;
+	height: 100px;
+	background-color: #FFC8C0;
+}
+.links {
+	text-align: center;
+	padding-top: 35px;
 }
