--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,37 +1,41 @@
 * {
-	font-family: 'Droid Sans Mono', monospace;
+	font-family: 'Lato', sans-serif;
 }
-
+body {
+	background-color: black;
+}
 #container {
-	font-family: 'Droid Sans Mono', monospace;
-	background-color: #FFE2CD;
+	font-family: 'Lato', sans-serif;
+	background-color: #DEE8EE;
 	margin: auto;
 	width: 90%;
 
 }
 header {
-	background-color: #FFC8C0;
+	background-color: #E8595E;
 	height: 200px;
-	border: 3px solid black;
+	border-bottom: 5px solid black;
 }
 h1 {
-	font-family: 'Droid Sans Mono', monospace;
-	font-size: 49px;
+	font-family: 'Carter One', cursive;
+	font-size: 60px;
 	font-weight: 600;
 	text-align: center;
 	padding-top: 80px;
-	color: darkblue;
+	color: ghostwhite;
+	text-shadow: -1px 0 black, 0 9px black, 1px 0 black, 0 -1px black;
 }
 .topicons {
 	display: relative;
 	text-align: center;
-	margin-top: 45px;
+	margin-top: 27px;
 
 }
 h3 {
 	display: inline;
 	font-size: 20px;
 	font-weight: 500;
+	font-family: 'Carter One', cursive;
 	position: relative;
 	margin: 18px;
 }
@@ -39,9 +43,12 @@ a {
 	display: inline;
 	font-size: 20px;
 	font-weight: 500;
+	font-family: 'Carter One', cursive;
 	text-decoration: none;
 	position: relative;
 	margin: 18px;
+	color: ghostwhite;
+	text-shadow: -1px 0 black, 0 4px black, 1px 0 black, 0 -1px black;
 }
 section {
 	height: 400px;
@@ -51,6 +58,21 @@ img {
 	width: 50%;
 }
 /*PORTFOLIO STYLE*/
+ul {
+	text-align: center;
+}
+li {
+	font-size: 20px;
+	padding-top: 30px;
+	color: #4F79E8;
+}
+h4 {
+	text-align: center;
+	padding-bottom: 11px;
+	padding-left: 50px;
+	padding-right: 50px;
+	font-size: 14px;
+}
 .projects img {
 	display: block;
 	margin: auto;
@@ -64,28 +86,43 @@ img {
 h2 {
 	font-size: 24px;
 	font-weight: 600;
-	color: darkblue;
+	color: black;
 	text-align: center;
 	padding-top: 42px;
 }
 p {
 	text-align: left;
-	padding-top: 47px;
+	padding-top: 34px;
 	padding-left: 44px;
 	padding-right: 450px;
 }
 /*PORTFOLIO STYLE*/
 p.experience {
 	text-align: center;
-	padding: 60px 124px;
+	padding: 34px 100px;
+	padding-bottom: 7px;
+	font-size: 18px;
+}
+.education {
+	margin: -28px;
+    text-align: left;
+    padding-bottom: 29px;
+    padding-right: 225px;
+    padding-left: 266px;
+}
+span {
+	font-size: 14px;
+	color: black;
+	font-style: italic;
 }
 footer {
 	clear: both;
 	height: 100px;
-	background-color: #FFC8C0;
-	border: 3px solid black;
+	background-color: #4F79E8;
+	border-top: 5px solid black;
 }
 .links {
 	text-align: center;
 	padding-top: 35px;
+	text-shadow: -1px 0 black, 0 4px black, 1px 0 black, 0 -1px black;
 }
